--- a/front-end/.gitignore
+++ b/front-end/.gitignore
@@ -2,9 +2,14 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 
 # production
-/dist
+/build
 
 # misc
 .DS_Store
@@ -16,5 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
-yarn-lock.json
